--- a/clientTaxiCab/res/layout/activity_show_location.xml
+++ b/clientTaxiCab/res/layout/activity_show_location.xml
@@ -3,15 +3,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+    
     <Button
         android:id="@+id/buttonStart"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonStop"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="83dp"
+        android:layout_alignLeft="@+id/buttonStop"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="38dp"
         android:text="Start" />
 
     <Button
@@ -19,9 +19,19 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonStart"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="38dp"
+        android:layout_below="@+id/buttonStart"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
         android:text="Stop" />
 
+    <TextView
+        android:id="@+id/currentState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="102dp"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
 </RelativeLayout>
