--- a/clientTaxiCab/res/menu/show_location.xml
+++ b/clientTaxiCab/res/menu/show_location.xml
@@ -3,10 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.idan.clienttaxicab.ShowLocationActivity" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+    <group android:id="@+id/groupMenuItems">
+        <item
+        android:id="@+id/fourA"
+        android:title="4א"
+        android:icon="@android:drawable/star_on"/>
+	    <item
+	        android:id="@+id/four"
+	        android:title="4"/>
+	    
+	    <item
+	        android:id="@+id/five"
+	        android:title="5"/>
+    </group>
+    
 
 </menu>
